Overflow fix.

--- a/styles.css
+++ b/styles.css
@@ -90787,5 +90787,4 @@ video {
 nav {
   margin: 0px -2000px;
   padding: 0px 2000px;
-  overflow-x: hidden;
 }
